fixed navbar so links are shown on the right and also cleaned up some of the css file and made some text be aligned in the center

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,8 @@ h6 {
 
 h1 {
   font-size: 2.25rem;
+  text-align: center;
+  line-height: 2rem;
 }
 
 h2 {
@@ -85,7 +87,8 @@ h6 {
 
 p {
   font-size: 1.1rem;
-  margin-top: 0;
+  line-height: 2rem;
+  text-align: center;
 }
 
 a {
@@ -100,10 +103,12 @@ a:hover {
 
 header {
   background: var(--color-primary);
+justify-content: space-between;
 }
 
 header a {
   color: var(--light);
+  float: right;
 }
 
 button {
@@ -131,13 +136,9 @@ img {
   max-width: 100%;
 }
 
-span[role="img"] {
-  cursor: default;
-}
 
-form {
-  width: 40%;
-}
+
+
 
 input {
   font-size: 1rem;
@@ -148,11 +149,6 @@ input {
   transition: box-shadow 0.2s;
 }
 
-input:focus {
-  border: 1px solid var(--secondary);
-  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
-}
-
 li {
   list-style: none;
 }
@@ -160,23 +156,13 @@ li {
 nav a:hover {
   text-decoration: none;
 }
-
-nav  li {
-  cursor: pointer;
+Nav a {
+  float: right;
 }
 
-textarea {
-	width: 600px;
-	height: 120px;
-	border: 3px solid #cccccc;
-	padding: 5px;
-}
-
-.container {
-  width: 85%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+.Nav {
+  /* cursor: pointer; */
+  float: right;
 }
 
 .flex-row {
@@ -186,55 +172,6 @@ textarea {
 
 .space-between {
   justify-content: space-between;
-}
-
-.flex-end {
-  justify-content: flex-end;
-}
-
-.mx-1 {
-  margin-right: var(--spacing-one);
-  margin-left: var(--spacing-one);
-}
-
-.mx-2 {
-  margin-right: var(--spacing-two);
-  margin-left: var(--spacing-two);
-}
-
-.my-1 {
-  margin-top: var(--spacing-one);
-  margin-bottom: var(--spacing-one);
-}
-
-.my-2 {
-  margin-top: var(--spacing-two);
-  margin-bottom: var(--spacing-two);
-}
-
-.my-5 {
-  margin-top: var(--spacing-five);
-  margin-bottom: var(--spacing-five);
-}
-
-.px-1 {
-  padding-right: var(--spacing-one);
-  padding-left: var(--spacing-one);
-}
-
-.px-2 {
-  padding-right: var(--spacing-two);
-  padding-left: var(--spacing-two);
-}
-
-.py-1 {
-  padding-top: var(--spacing-one);
-  padding-bottom: var(--spacing-one);
-}
-
-.py-2 {
-  padding-top: var(--spacing-two);
-  padding-bottom: var(--spacing-two);
 }
 
 .card {
@@ -247,32 +184,6 @@ textarea {
   height: 300px;
   margin-bottom: 50px;
   cursor: pointer;
-}
-
-.modalBackdrop {
-	background: rgba(0, 0, 0, .65);
-	bottom: 0;
-	left: 0;
-	overflow: auto;
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 1;
-}
-
-.modalContainer {
-	background: var(--darker);
-	border-radius: 5px;
-	max-width: 100%;
-	margin: 50px auto;
-	padding: 15px;
-	width: 960px;
-}
-
-.modalTitle {
-	font-size: 18px;
-	font-weight: 600;
-	margin-bottom: 25px;
 }
 
 button {
@@ -313,4 +224,14 @@ a {
 
 .btn {
   margin: .4rem;
+}
+
+#contact {
+  text-align: center;
+  
+}
+
+#contact h1 {
+  
+  margin-bottom: 1rem;
 }
